# murder-she-inferred

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
docs/: local-model-setup.md  roadmap.md  spec.md  user-manual.md
local-run/: .gitignore
scripts/: build_episode_timeline_chunks.py  infer_timelines.py  infer_timelines_with_codex_cli.py  plot_timeline.py  qc_timelines.py  run_full_pipeline.py
src/murder_she_inferred/: __init__.py  backends.py  cli.py  inference.py  ingest.py  models.py  pipeline.py  settings.py  tracker.py
test-run/: .gitignore
test-run/01-transcripts/: T01 - Harbor Ledger.txt  T02 - Gallery Opening.txt  T03 - Founders Weekend.txt  T04 - Bell Tower Static.txt  T05 - Last Ferry Interview.txt
tests/: conftest.py  test_backends.py  test_inference.py  test_ingest.py  test_models.py  test_plot_timeline.py  test_settings.py  test_synthetic_test_transcripts.py  test_tracker.py
tests/test_transcripts/: T03 - Founders Weekend.txt  T04 - Bell Tower Static.txt  T05 - Last Ferry Interview.txt
