[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murder-she-inferred"
version = "0.1.0"
description = "Temporal inference of culpability in Murder, She Wrote using AI"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
"murder-she-inferred" = "murder_she_inferred.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
